--- a/LocalLocation/app/src/main/res/values/strings.xml
+++ b/LocalLocation/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MainActivity</string>
+    <string name="result_text_view" formatted="false">Latitude %s\nLongitude %s\nGenauigkeit %s Meter</string>
+    <string name="loading">wird geladen…</string>
 </resources>
