--- a/LocalLocation/app/src/main/res/values/strings.xml
+++ b/LocalLocation/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MainActivity</string>
     <string name="result_text_view" formatted="false">Latitude %s\nLongitude %s\nGenauigkeit %s Meter</string>
     <string name="loading">wird geladen…</string>
+    <string name="gps_not_show">GPS ist nicht aktiviert!</string>
 </resources>
