--- a/LocalLocation/app/src/main/res/values/strings.xml
+++ b/LocalLocation/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Local Location</string>
-    <string name="result_text_view" formatted="false">Latitude %s\nLongitude %s\nGenauigkeit %s Meter\nAccuracy %s Meter</string>
+    <string name="result_text_view_25" formatted="false">Latitude %s\nLongitude %s\nGenauigkeit %s Meter\nGeschwindigkeit %s m/s</string>
+    <string name="result_text_view" formatted="false">Latitude %s\nLongitude %s\nGenauigkeit %s Meter\nGeschwindigkeit %s m/s\nAccuracyMeters %s</string>
     <string name="loading">wird geladen…</string>
     <string name="gps_not_show">GPS ist nicht aktiviert!</string>
 </resources>
